@@ -37,13 +37,13 @@ import net.mcreator.ui.init.L10N;
 import net.mcreator.ui.init.UIRES;
 import net.mcreator.ui.laf.SlickDarkScrollBarUI;
 import net.mcreator.util.HtmlUtils;
-import net.mcreator.util.TimeUtils;
+import net.mcreator.util.math.TimeUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.gradle.internal.impldep.org.apache.commons.lang.exception.ExceptionUtils;
 import org.gradle.tooling.*;
-import org.jetbrains.annotations.Nullable;
 
+import javax.annotation.Nullable;
 import javax.swing.*;
 import javax.swing.event.HyperlinkEvent;
 import javax.swing.text.SimpleAttributeSet;
@@ -87,6 +87,9 @@ public class GradleConsole extends JPanel {
 
 	private CancellationTokenSource cancellationSource = GradleConnector.newCancellationTokenSource();
 
+	// a flag to prevent infinite re-runs in case when re-run does not solve the build problem
+	public boolean rerunFlag = false;
+
 	public GradleConsole(MCreator ref) {
 		this.ref = ref;
 
@@ -103,7 +106,7 @@ public class GradleConsole extends JPanel {
 					ProjectFileOpener.openFileAtLine(ref, file, linenum);
 				} else { // we got FQDN instead
 					try {
-						ProjectJarManager jarManager = ref.getWorkspace().getGenerator().getProjectJarManager();
+						ProjectJarManager jarManager = ref.getGenerator().getProjectJarManager();
 						if (jarManager != null) {
 							DeclarationFinder.InClassPosition position = ClassFinder
 									.fqdnToInClassPosition(ref.getWorkspace(), fileurl, "mod.mcreator", jarManager);
@@ -155,19 +158,19 @@ public class GradleConsole extends JPanel {
 		bar.setLayout(new BoxLayout(bar, BoxLayout.LINE_AXIS));
 		bar.setBackground(Color.gray);
 
-		JButton x = new JButton("Clear log");
+		JButton x = L10N.button("dialog.gradle_console.clear_log");
 		x.setMargin(new Insets(1, 1, 1, 1));
 
 		JToolBar options = new JToolBar(null, SwingConstants.VERTICAL);
 		options.setFloatable(false);
 		options.setBackground((Color) UIManager.get("MCreatorLAF.BLACK_ACCENT"));
 
-		searchen.setToolTipText("Search in gradle console");
+		searchen.setToolTipText(L10N.t("dialog.gradle_console.search"));
 		searchen.setCursor(new Cursor(Cursor.HAND_CURSOR));
 		options.add(searchen);
 
 		KeyStrokes.registerKeyStroke(
-				KeyStroke.getKeyStroke(KeyEvent.VK_F, Toolkit.getDefaultToolkit().getMenuShortcutKeyMask()), pan,
+				KeyStroke.getKeyStroke(KeyEvent.VK_F, Toolkit.getDefaultToolkit().getMenuShortcutKeyMaskEx()), pan,
 				new AbstractAction() {
 					@Override public void actionPerformed(ActionEvent actionEvent) {
 						searchen.setSelected(true);
@@ -177,8 +180,7 @@ public class GradleConsole extends JPanel {
 		JButton buildbt = new JButton(UIRES.get("16px.build"));
 		buildbt.setCursor(new Cursor(Cursor.HAND_CURSOR));
 		ComponentUtils.normalizeButton2(buildbt);
-		buildbt.setToolTipText("<html>Click this to build the whole workspace<br><small>"
-				+ "You can start build by Ctrl + clicking on the Console tab too");
+		buildbt.setToolTipText(L10N.t("dialog.gradle_console.start_build"));
 		buildbt.setOpaque(false);
 		buildbt.addActionListener(e -> ref.actionRegistry.buildWorkspace.doAction());
 		options.add(buildbt);
@@ -186,8 +188,7 @@ public class GradleConsole extends JPanel {
 		JButton rungradletask = new JButton(UIRES.get("16px.runtask"));
 		rungradletask.setCursor(new Cursor(Cursor.HAND_CURSOR));
 		ComponentUtils.normalizeButton2(rungradletask);
-		rungradletask.setToolTipText("<html>Click this to run a specific Gradle task<br><small>"
-				+ "This tool can only be used when there are no active Gradle tasks running.");
+		rungradletask.setToolTipText(L10N.t("dialog.gradle_console.run_specific_task"));
 		rungradletask.setOpaque(false);
 		rungradletask.addActionListener(e -> ref.actionRegistry.runGradleTask.doAction());
 		options.add(rungradletask);
@@ -197,7 +198,7 @@ public class GradleConsole extends JPanel {
 		JButton cpc = new JButton(UIRES.get("16px.copyclipboard"));
 		cpc.setCursor(new Cursor(Cursor.HAND_CURSOR));
 		ComponentUtils.normalizeButton2(cpc);
-		cpc.setToolTipText("Copy console contents to clipboard");
+		cpc.setToolTipText(L10N.t("dialog.gradle_console.copy_contents_clipboard"));
 		cpc.setOpaque(false);
 		cpc.addActionListener(e -> {
 			StringSelection stringSelection = new StringSelection(getConsoleText());
@@ -209,7 +210,7 @@ public class GradleConsole extends JPanel {
 		JButton clr = new JButton(UIRES.get("16px.clear"));
 		clr.setCursor(new Cursor(Cursor.HAND_CURSOR));
 		ComponentUtils.normalizeButton2(clr);
-		clr.setToolTipText("Clear console");
+		clr.setToolTipText(L10N.t("dialog.gradle_console.clear"));
 		clr.addActionListener(e -> {
 			pan.clearConsole();
 			searchBar.reinstall(pan);
@@ -220,17 +221,17 @@ public class GradleConsole extends JPanel {
 
 		options.add(ComponentUtils.deriveFont(new JLabel(" "), 2));
 
-		sinfo.setToolTipText("Show info log in console");
+		sinfo.setToolTipText(L10N.t("dialog.gradle_console.show_info_log"));
 		sinfo.setCursor(new Cursor(Cursor.HAND_CURSOR));
 		sinfo.setSelected(true);
 		options.add(sinfo);
 
-		serr.setToolTipText("Show errors in console");
+		serr.setToolTipText(L10N.t("dialog.gradle_console.show_errors"));
 		serr.setCursor(new Cursor(Cursor.HAND_CURSOR));
 		serr.setSelected(true);
 		options.add(serr);
 
-		slock.setToolTipText("Scroll lock");
+		slock.setToolTipText(L10N.t("dialog.gradle_console.lock_scroll"));
 		slock.setCursor(new Cursor(Cursor.HAND_CURSOR));
 		options.add(slock);
 
@@ -302,15 +303,13 @@ public class GradleConsole extends JPanel {
 		}
 
 		// reset mod problems
-		if (ref.getWorkspace() != null)
-			ref.getWorkspace().resetModElementCompilesStatus();
+		ref.getWorkspace().resetModElementCompilesStatus();
 
 		long millis = System.currentTimeMillis();
 
 		if (PreferencesManager.PREFERENCES.gradle.offline && gradleSetupTaskRunning) {
-			JOptionPane.showMessageDialog(ref, "<html><b>You have set MCreator to run in offline mode!</b><br>"
-					+ "<br>MCreator can not setup Minecraft Forge in offline mode."
-					+ "<br>The offline mode will be disabled.", "Offline mode warning", JOptionPane.WARNING_MESSAGE);
+			JOptionPane.showMessageDialog(ref, L10N.t("dialog.gradle_console.offline_mode_message"),
+					L10N.t("dialog.gradle_console.offline_mode_title"), JOptionPane.WARNING_MESSAGE);
 			PreferencesManager.PREFERENCES.gradle.offline = false;
 		}
 
@@ -324,52 +323,80 @@ public class GradleConsole extends JPanel {
 		if (PreferencesManager.PREFERENCES.gradle.offline)
 			arguments.add("--offline");
 
-		task.withArguments(arguments);
+		task.addArguments(arguments);
 
 		task.withCancellationToken(cancellationSource.token());
 
 		task.setStandardOutput(new OutputStreamEventHandler(line -> SwingUtilities.invokeLater(() -> {
 			taskOut.append(line).append("\n");
 			if (sinfo.isSelected()) {
-				if (!line.startsWith("Note: Some input files use or ov"))
-					if (!line.startsWith("Note: Recompile with -Xlint"))
-						if (!line.startsWith("Note: Some input files use unch"))
-							if (!line.contains("Advanced terminal features are not available in this environment"))
-								if (!line.contains("Disabling terminal, you're running in an unsupported environment"))
-									if (!line.contains("uses or overrides a deprecated API"))
-										if (!line.contains("unchecked or unsafe operations")) {
-											if (line.startsWith(":") || line.startsWith(">")) {
-												if (line.contains(" UP-TO-DATE") || line.contains(" NO-SOURCE") || line
-														.contains(" SKIPPED"))
-													append(line, new Color(0x7B7B7B), true);
-												else
-													append(line, new Color(0xDADADA), true);
-											} else if (line.startsWith("BUILD SUCCESSFUL")) {
-												append(line, new Color(187, 232, 108), false);
-											} else {
-												appendAutoColor(line);
-											}
-										}
+				if (line.startsWith("Note: Some input files use or ov"))
+					return;
+				if (line.startsWith("Note: Recompile with -Xlint"))
+					return;
+				if (line.startsWith("Note: Some input files use unch"))
+					return;
+				if (line.contains("Advanced terminal features are not available in this environment"))
+					return;
+				if (line.contains("Disabling terminal, you're running in an unsupported environment"))
+					return;
+				if (line.contains("uses or overrides a deprecated API"))
+					return;
+				if (line.contains("unchecked or unsafe operations"))
+					return;
+
+				if (line.startsWith(":") || line.startsWith(">")) {
+					if (line.contains(" UP-TO-DATE") || line.contains(" NO-SOURCE") || line.contains(" SKIPPED"))
+						append(line, new Color(0x7B7B7B), true);
+					else
+						append(line, new Color(0xDADADA), true);
+				} else if (line.startsWith("BUILD SUCCESSFUL")) {
+					append(line, new Color(187, 232, 108), false);
+				} else {
+					appendAutoColor(line);
+				}
 			}
 		})));
 
 		task.setStandardError(new OutputStreamEventHandler(line -> SwingUtilities.invokeLater(() -> {
 			taskErr.append(line).append("\n");
 			if (serr.isSelected()) {
-				if (!line.startsWith("Note: Some input files use or ov"))
-					if (!line.startsWith("Note: Recompile with -Xlint"))
-						if (!line.startsWith("Note: Some input files use unch"))
-							if (!line.contains("uses or overrides a deprecated API"))
-								if (!line.contains("unchecked or unsafe operations"))
-									append(line, new Color(0, 255, 182));
+				if (line.startsWith("[")) {
+					appendAutoColor(line);
+				} else {
+					if (line.startsWith("Note: Some input files use or ov"))
+						return;
+					if (line.startsWith("Note: Recompile with -Xlint"))
+						return;
+					if (line.startsWith("Note: Some input files use unch"))
+						return;
+					if (line.contains("uses or overrides a deprecated API"))
+						return;
+					if (line.contains("unchecked or unsafe operations"))
+						return;
+					if (line.startsWith("WARNING: An illegal reflective access"))
+						return;
+					if (line.startsWith("WARNING: Illegal reflective access"))
+						return;
+					if (line.startsWith("WARNING: Please consider reporting this"))
+						return;
+					if (line.startsWith("WARNING: Use --illegal-access=warn to enable"))
+						return;
+					if (line.startsWith("WARNING: All illegal access operations will"))
+						return;
+
+					append(line, new Color(0, 255, 182));
+				}
 			}
 		})));
 
 		task.addProgressListener((ProgressListener) event -> ref.statusBar.setGradleMessage(event.getDescription()));
 
-		task.run(new ResultHandler<Void>() {
+		task.run(new ResultHandler<>() {
 			@Override public void onComplete(Void result) {
 				SwingUtilities.invokeLater(() -> {
+					ref.getWorkspace().checkFailingGradleDependenciesAndClear(); // clear flag without checking
+
 					succeed();
 					taskComplete(GradleErrorCodes.STATUS_OK);
 				});
@@ -379,30 +406,41 @@ public class GradleConsole extends JPanel {
 				SwingUtilities.invokeLater(() -> {
 					boolean errorhandled = false;
 
+					boolean workspaceReportedFailingGradleDependencies = ref.getWorkspace()
+							.checkFailingGradleDependenciesAndClear();
+
 					if (failure instanceof BuildException) {
-						if (GradleErrorDecoder
-								.isErrorCausedByCorruptedCaches(taskErr.toString() + taskOut.toString())) {
-							Object[] options = { "Clear Gradle caches", "Clear entire Gradle folder", "Do nothing" };
+						if (GradleErrorDecoder.doesErrorSuggestRerun(taskErr.toString() + taskOut)) {
+							if (!rerunFlag) {
+								rerunFlag = true;
+
+								LOG.warn("Gradle task suggested re-run. Attempting re-running task: " + command);
+
+								// Re-run the same command with the same listener
+								GradleConsole.this.exec(command, taskSpecificListener);
+
+								return;
+							}
+						} else if (workspaceReportedFailingGradleDependencies || GradleErrorDecoder
+								.isErrorCausedByCorruptedCaches(taskErr.toString() + taskOut)) {
+							Object[] options = { "Clear Gradle caches", "Clear entire Gradle folder",
+									"<html><font color=gray>Do nothing" };
 							int reply = JOptionPane.showOptionDialog(ref,
-									"<html><b>MCreator detected Gradle caches got corrupted.</b><br>"
-											+ "Don't worry, we can fix this for you, we just need to rebuild these caches.<br><br>"
-											+ "This action will not affect your files or workspaces, but after clearing the caches,<br>"
-											+ "build of every generator type and version will take a bit longer the first time.<br>"
-											+ "In some cases, clearing entire Gradle folder is needed to resolve Gradle errors.<br><br>"
-											+ "<small>Any running build tasks or open test clients will be closed during this action.",
-									"Gradle caches corrupted", JOptionPane.YES_NO_OPTION, JOptionPane.WARNING_MESSAGE,
-									null, options, options[0]);
+									L10N.t("dialog.gradle_console.gradle_caches_corrupted_message"),
+									L10N.t("dialog.gradle_console.gradle_caches_corrupted_title"),
+									JOptionPane.YES_NO_OPTION, JOptionPane.WARNING_MESSAGE, null, options, options[0]);
 							if (reply == 0 || reply == 1) {
-								ClearAllGradleCachesAction.clearAllGradleCaches(ref, reply == 1);
-								succeed();
-								taskComplete(GradleErrorCodes.STATUS_OK);
+								taskComplete(GradleErrorCodes.GRADLE_CACHEDATA_ERROR);
+
+								ClearAllGradleCachesAction.clearAllGradleCaches(ref, reply == 1,
+										workspaceReportedFailingGradleDependencies);
+
 								return;
 							}
 							errorhandled = true;
 						} else if (taskErr.toString().contains("compileJava FAILED") || taskOut.toString()
 								.contains("compileJava FAILED")) {
-							errorhandled = CodeErrorDialog
-									.showCodeErrorDialog(ref, taskErr.toString() + taskOut.toString());
+							errorhandled = CodeErrorDialog.showCodeErrorDialog(ref, taskErr.toString() + taskOut);
 						}
 						append("BUILD FAILED", new Color(0xF98771));
 					} else if (failure instanceof BuildCancelledException) {
@@ -457,6 +495,12 @@ public class GradleConsole extends JPanel {
 				ref.consoleTab.repaint();
 				ref.statusBar.reloadGradleIndicator();
 				ref.statusBar.setGradleMessage(L10N.t("gradle.idle"));
+
+				// on success, we clear the re-run flag
+				if (rerunFlag) {
+					rerunFlag = false;
+					LOG.info("Clearing the re-run flag after a successful re-run");
+				}
 			}
 
 			private void taskComplete(int mcreatorGradleStatus) {
